[tool.poetry]
name = "pydnsapi"
version = "1.0.0"
description = "Bind9 Rest API built with FastAPI and Dnspython"
authors = ["Chinthaka Deshapriya <chinthaka.Deshapriya@gmail.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.7"
dnspython = "^2.2.0"
fastapi = "^0.72.0"
uvicorn = "^0.17.0"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
