[tool.poetry]
name = "pydnsapi"
version = "1.0.0"
description = "Bind9 Rest API built with FastAPI and Dnspython"
authors = ["Chinthaka Deshapriya <chinthaka.Deshapriya@gmail.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.9"
dnspython = "^2.2.1"
fastapi = "^0.83.0"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]
pylint = "^2.15.4"

[build-system]
requires = ["poetry-core>=1.2.3"]
build-backend = "poetry.core.masonry.api"
